force-app/main/default/objects/Utility_Enrollment__c/Utility_Enrollment__c.object-meta.xml
<CustomObject>
    <description>record enrollment records for a utility.  Currently supported utility is Nipsco.</description>
    <label>Utility Enrollment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utility Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>