force-app/main/default/objects/Utility_Enrollment__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>Premise__r.Account_Number__c</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>