force-app/main/default/objects/Utility_Enrollment__c/fields/Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Meter_Number__c</fullName>
    <formula>Premise__r.Meter_Number__c</formula>
    <label>Meter Number</label>
    <type>Text</type>
</CustomField>