force-app/main/default/objects/Utility_Enrollment__c/fields/Pool_ID__c.field-meta.xml
<CustomField>
    <fullName>Pool_ID__c</fullName>
    <label>Pool ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>