force-app/main/default/objects/Utility_Enrollment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Process__c, &#39;Pending Export&#39;, IF(NOT(ISBLANK(Processed_Date__c)), &#39;Export Complete&#39;,&#39;Pending Processing&#39;))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>