force-app/main/default/objects/Utility_Enrollment__c/fields/Transport_ID__c.field-meta.xml
<CustomField>
    <fullName>Transport_ID__c</fullName>
    <formula>Premise__r.Transport_ID__c</formula>
    <label>Transport ID</label>
    <type>Text</type>
</CustomField>