force-app/main/default/objects/Utility_Enrollment__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Utility Enrollments</relationshipLabel>
    <relationshipName>Utility_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>