force-app/main/default/objects/Utility_Enrollment__c/validationRules/Pool_Required_to_Process_Nipsco.validationRule-meta.xml
<ValidationRule>
    <fullName>Pool_Required_to_Process_Nipsco</fullName>
    <active>true</active>
    <description>if nipsco enrollment, pool id should be populated before process can be selected</description>
    <errorConditionFormula>AND(
  ISPICKVAL(File_Type__c, 
  &#39;NIPSCO Choice&#39;), Process__c, 
  ISBLANK(Pool_ID__c)
)</errorConditionFormula>
    <errorMessage>A Pool ID must be populated before a NIPSCO Enrollment/De-enrollment can be processed</errorMessage>
</ValidationRule>