force-app/main/default/objects/Utility_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Utility__c</columns>
    <columns>Premise__c</columns>
    <columns>Pool_ID__c</columns>
    <columns>Type__c</columns>
    <columns>Processed_Date__c</columns>
    <columns>Process__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>