force-app/main/default/objects/Utility_Enrollment__c/listViews/Enrollments_Pending_Processing.listView-meta.xml
<ListView>
    <fullName>Enrollments_Pending_Processing</fullName>
    <columns>NAME</columns>
    <columns>Utility__c</columns>
    <columns>Premise__c</columns>
    <columns>Transport_ID__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Pool_ID__c</columns>
    <columns>Type__c</columns>
    <columns>Process__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Processed_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Enrollments Pending Processing</label>
</ListView>