force-app/main/default/objects/Utility_Enrollment__c/listViews/Enrollments_Processed_and_Exported.listView-meta.xml
<ListView>
    <fullName>Enrollments_Processed_and_Exported</fullName>
    <columns>NAME</columns>
    <columns>Utility__c</columns>
    <columns>Premise__c</columns>
    <columns>Transport_ID__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Pool_ID__c</columns>
    <columns>Type__c</columns>
    <columns>Processed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Processed_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Enrollments Processed and Exported</label>
</ListView>